[package]
name = "otter-jsc-core"
version = "0.1.0"
edition = "2024"
description = "Safe Rust wrappers for JavaScriptCore"
license = "MIT"
repository = "https://github.com/octofhir/otter"
homepage = "https://github.com/octofhir/otter"
keywords = ["javascript", "javascriptcore", "jsc", "runtime"]
categories = ["development-tools", "wasm"]
readme = "README.md"

[dependencies]
otter-jsc-sys = { path = "../otter-jsc-sys", version = "0.1.0" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
