[package]
name = "otter-jsc-core"
version = "0.1.3"
edition = "2024"
description = "Safe Rust wrappers for JavaScriptCore"
license = "MIT"
repository = "https://github.com/octofhir/otter"
homepage = "https://github.com/octofhir/otter"
keywords = ["javascript", "javascriptcore", "jsc", "runtime"]
categories = ["development-tools", "wasm"]
readme = "README.md"

[dependencies]
otter-jsc-sys = { path = "../otter-jsc-sys", version = "0.1.2" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serial_test = "3"
