[package]
name = "otter-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macros for Otter runtime - #[dive] attribute for native functions"
license = "MIT"
autotests = false
repository = "https://github.com/octofhir/otter"
homepage = "https://github.com/octofhir/otter"
keywords = ["otter", "macros", "proc-macro", "javascript", "runtime"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
otter-vm = { path = "../otter-vm" }

[[test]]
name = "js_class_descriptor"
path = "tests/js_class_descriptor.rs"

[[test]]
name = "js_namespace_descriptor"
path = "tests/js_namespace_descriptor.rs"
