[package]
name = "otter-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macros for descriptor-driven JS bindings in the Otter runtime"
license = "MIT"
autotests = false
repository = "https://github.com/octofhir/otter"
homepage = "https://github.com/octofhir/otter"
keywords = ["otter", "macros", "proc-macro", "javascript", "runtime"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
otter-runtime = { path = "../otter-runtime" }
otter-vm = { path = "../otter-vm" }

[[test]]
name = "js_class_descriptor"
path = "tests/js_class_descriptor.rs"

[[test]]
name = "js_namespace_descriptor"
path = "tests/js_namespace_descriptor.rs"

[[test]]
name = "dive_descriptor"
path = "tests/dive_descriptor.rs"

[[test]]
name = "raft_bindings"
path = "tests/raft_bindings.rs"

[[test]]
name = "burrow_descriptors"
path = "tests/burrow_descriptors.rs"

[[test]]
name = "lodge_loader"
path = "tests/lodge_loader.rs"
