[package]
name = "otter-macros"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Zero-cost JavaScript surface macros for Otter."

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
otter-gc = { workspace = true }
otter-vm = { workspace = true }
