[package]
name = "otter-modules"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Otter-hosted modules for the active runtime stack."

[dependencies]
libloading = "0.8"
otter-runtime = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
