[package]
name = "otter-node-compat"
version = "0.1.0"
edition = "2024"
description = "Node.js compatibility test runner for Otter VM"
license = "MIT"
publish = false

[[bin]]
name = "node-compat"
path = "src/main.rs"

[dependencies]
otter-engine = { path = "../otter-engine", version = "0.1.3" }
otter-vm-core = { path = "../otter-vm-core", version = "0.1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.18"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3.31"
