[package]
name = "otter-node-compat"
version = "0.1.0"
edition = "2024"
description = "Parked Node.js compatibility runner shim"
license = "MIT"
autotests = false
publish = false

[lib]
test = false
doctest = false

[workspace]

[[bin]]
name = "node-compat"
path = "src/main.rs"
test = false

[dependencies]
