[package]
name = "otter-node-compat"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Node.js compatibility conformance runner for the active Otter runtime stack"
autotests = false

[lib]
doctest = false

[[bin]]
name = "node-compat"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
