[package]
name = "otter-node"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Node.js-compatible hosted modules for Otter."

[dependencies]
otter-runtime = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
