[package]
name = "otter-node"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Node.js-compatible hosted modules for Otter."

[dependencies]
otter-runtime = { workspace = true }
otter-vm = { workspace = true }
otter-gc = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
