[package]
name = "otter-pm-lockfile"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Deterministic otter-lock model for Otter package management."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

