[package]
name = "otter-pm-manifest"
version = "0.1.0"
edition = "2024"
description = "package.json + workspace manifest types for Otter's package manager"
license = "MIT"
repository = "https://github.com/octofhir/otter"
autotests = false

[lib]
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror.workspace = true
glob = "0.3"

[dev-dependencies]
tempfile = "3"
