[package]
name = "otter-pm"
version = "0.1.1"
edition = "2024"
description = "NPM-compatible package manager for Otter"
license = "MIT"
repository = "https://github.com/octofhir/otter"
homepage = "https://github.com/octofhir/otter"
keywords = ["npm", "package-manager", "javascript", "typescript", "otter"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.13", features = ["json", "http2"] }
semver = "1"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
flate2 = "1"
tar = "0.4"
dirs = "6"
indicatif = "0.18"
futures = "0.3"
console = "0.16"
hex = "0.4"
walkdir = "2"
rayon = "1.11"
strsim = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
