[package]
name = "otter-pm"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Active Otter package-manager graph and installer interfaces."

[lints]
workspace = true

[dependencies]
otter-pm-lockfile = { workspace = true }
otter-pm-manifest = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
